# world-spending-perspective

./: .env.example  .gitignore  CL_COFOG.parquet  LICENSE  Makefile  README.md  local.duckdb  pyproject.toml  test.duckdb
.devcontainer/: devcontainer.json
.github/instructions/: copilot-instructions.md.instructions.md
.github/prompts/: 00_OBJECTIVE_AND_SUCCESS_CRITERIA.prompt.md  01_DATA_SOURCES_AND_STANDARDS.prompt.md  02_SYSTEM_ARCHITECTURE_AND_ROUTING.prompt.md
.github/workflows/: ci.yml
src/: cli.py
src/adapters/: base.py  http.py
src/codelists/: loader.py
src/cofogviz/adapters/: base.py  http.py
src/cofogviz/codelists/: __init__.py  loader.py
src/cofogviz/coverage/: build_coverage_registry.py
src/cofogviz/etl/: hello_world.py
src/cofogviz/routing/: choose_source.py
src/coverage/: build_coverage_registry.py  registry.py
src/etl/: hello_world.py
src/routing/: choose_source.py
src/warehouse/: __init__.py
tests/: test_coverage_registry.py  test_routing.py  test_smoke_empty_tables.py
