[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-spending-perspective"          # distribution name (keep or rename)
version = "0.1.0"
description = "COFOG drill-down ETL infra scaffold"
requires-python = ">=3.12"
authors = [
  { name = "Your Name", email = "your@email.com" }
]
dependencies = [
  "httpx>=0.27.0,<1",
  "pydantic>=2.7,<3",
  "duckdb>=0.10,<1",
  "pyarrow>=16,<20",
  "rich>=13.7,<14",
  "python-dotenv>=1,<2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9"
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false


